<resources>
    <string name="app_name">One Stop</string>
    <string name="welcome">Welcome to \n OneStop</string>
    <string name="login">Login</string>
    <string name="example_email">ex: abc@email.com</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="example_name">ex: Ayush Kumar</string>
    <string name="last_name">Last Name</string>
    <string name="example_last_name">ex: Singh</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="example_phoneNo">ex: 8217804700</string>
    <string name="e_mail">E-mail</string>
    <string name="verify_and_signup">Verify and Signup</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter one time password shared to your email</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="home">Home</string>
    <string name="customer_name">Customer Name</string>
    <string name="do_more">Do more with your profile</string>
    <string name="legal">Legal</string>
    <string name="v100_00">v100_00</string>
    <string name="cart">Cart</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="payment">Payment</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="example_profile_pic">ex: www.ppic.jpg</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="verify_email_orange_text">For added security, please verify your email</string>
    <string name="verification_update_text">verification code is sent to email address</string>
    <string name="verification_using_otp">Verify Using OTP</string>
    <string name="done">Done</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="price">Price</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_order">Place Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="call">Call</string>
    <string name="help_call">Our support team will get\nin touch with you</string>
    <string name="mail">Mail</string>
    <string name="help_mail">Mail to us and \nshare your query</string>
    <string name="message">Message</string>
    <string name="help_message">Send us a message\nwith your query</string>
    <string name="sign_out">Sign Out</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="add_a_new_address">+ Add a new address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="name">Name</string>
    <string name="house_no_flat_no">House No. / Flat No.</string>
    <string name="building_name_colony_name">Building Name / Colony Name</string>
    <string name="street_name">Street Name</string>
    <string name="pin_code">Pin Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="choose_type">Choose Type</string>
    <string name="add_address">Add Address</string>
    <string name="language">Language</string>
    <string name="google_pay">Google Pay</string>
    <string name="phonepe">PhonePe</string>
    <string name="bhim">BHIM</string>
    <string name="debit_credit_atm">Debit/Credit/ATM Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="cod">Cash On Delivery</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="ayush">Ayush</string>
</resources>
