<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignupScreen">

    <TextView
        android:id="@+id/heading_tv"
        style="@style/HeaderTV"
        android:text="@string/sign_up"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        style="@style/LinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/heading_tv">

        <TextView
            style="@style/SignupTV"
            android:text="@string/first_name"/>

        <EditText
            android:id="@+id/fname_et"
            style="@style/SignupET"
            android:hint="@string/example_name"/>

        <TextView
            style="@style/SignupTV"
            android:text="@string/last_name"/>

        <EditText
            android:id="@+id/lname_et"
            style="@style/SignupET"
            android:hint="@string/example_last_name"/>

        <TextView
            style="@style/SignupTV"
            android:text="@string/mobile_number"/>

        <EditText
            android:id="@+id/phone_number_et"
            style="@style/SignupET"
            android:hint="@string/example_phoneNo"/>
        <TextView
            style="@style/SignupTV"
            android:text="@string/e_mail"/>

        <EditText
            android:id="@+id/email_et"
            style="@style/SignupET"
            android:hint="@string/example_email"/>
    </LinearLayout>

    <Button
        android:id="@+id/verify_btn"
        style="@style/CustomButton"
        android:text="@string/verify_and_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>