<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Address.AddAddressScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_ib"
            style="@style/ToolBarButton"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:id="@+id/title_tv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:text="@string/choose_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/address_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <Spinner
        android:id="@+id/address_type_spinner"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/name_et"
        style="@style/AddAddressET"
        android:layout_marginTop="0dp"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/address_phone_et"
        style="@style/AddAddressET"
        android:inputType="phone"
        android:hint="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et"/>

    <EditText
        android:id="@+id/address_house_no_et"
        style="@style/AddAddressET"
        android:hint="@string/house_no_flat_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_phone_et"/>

    <EditText
        android:id="@+id/address_building_name_et"
        style="@style/AddAddressET"
        android:hint="@string/building_name_colony_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_house_no_et"/>

    <EditText
        android:id="@+id/address_street_name_et"
        style="@style/AddAddressET"
        android:hint="@string/street_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_building_name_et"/>

    <EditText
        android:id="@+id/address_pincode_et"
        style="@style/AddAddressET"
        android:hint="@string/pin_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_street_name_et"/>

    <EditText
        android:id="@+id/address_city_et"
        style="@style/AddAddressET"
        android:hint="@string/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_pincode_et"/>

    <EditText
        android:id="@+id/address_state_et"
        style="@style/AddAddressET"
        android:hint="@string/state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_city_et"/>

    <Button
        android:id="@+id/save_address_btn"
        style="@style/CustomButton"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>