<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help.HelpScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_ib"
            style="@style/ToolBarButton"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:id="@+id/title_tv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/call_image"
        style="@style/HelpIV"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/call_tv"
        android:text="@string/call"
        style="@style/HelpTV"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toRightOf="@+id/call_image"/>

    <TextView
        android:id="@+id/call_sub_tv"
        style="@style/HelpSubTV"
        android:text="@string/help_call"
        app:layout_constraintTop_toBottomOf="@id/call_tv"
        app:layout_constraintLeft_toRightOf="@id/call_image"/>

    <!--    Mail-->


    <ImageView
        android:id="@+id/email_image"
        style="@style/HelpIV"
        app:layout_constraintTop_toBottomOf="@id/call_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/email_tv"
        android:text="@string/mail"
        style="@style/HelpTV"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/call_sub_tv"
        app:layout_constraintLeft_toRightOf="@+id/email_image"/>

    <TextView
        android:id="@+id/mail_sub_tv"
        style="@style/HelpSubTV"
        android:text="@string/help_mail"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        app:layout_constraintLeft_toRightOf="@+id/email_image"/>

    <!--    Message-->
    <ImageView
        android:id="@+id/message_image"
        style="@style/HelpIV"
        app:layout_constraintTop_toBottomOf="@+id/email_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/message_tv"
        android:text="@string/message"
        android:layout_marginTop="70dp"
        style="@style/HelpTV"
        app:layout_constraintTop_toBottomOf="@+id/mail_sub_tv"
        app:layout_constraintLeft_toRightOf="@+id/message_image"/>

    <TextView
        style="@style/HelpSubTV"
        android:text="@string/help_message"
        app:layout_constraintTop_toBottomOf="@+id/message_tv"
        app:layout_constraintLeft_toRightOf="@+id/message_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>