<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginScreen">

    <LinearLayout
        android:id="@+id/welcome_ll"
        style="@style/LinearLayout"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcome_tv"
            style="@style/WelcomeTV"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:lines="2"/>

        <ImageView
            style="@style/WelcomeImage"
            android:contentDescription="@string/welcome" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_ll"
        style="@style/LinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/welcome_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/LoginTextView"
            android:text="@string/login"
            android:textSize="20sp"
            android:paddingLeft="5dp"/>

        <EditText
            android:id="@+id/email_et"
            style="@style/LoginEditText"
            android:hint="@string/example_email"/>

        <EditText
            android:id="@+id/password_et"
            style="@style/LoginEditText"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_ll"/>

    <LinearLayout
        android:orientation="horizontal"
        style="@style/LinearLayout"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn">

    <ImageButton
        android:id="@+id/signup_ib"
        style="@style/LoginImageButtons"
        android:src="@drawable/signup_image"/>

    <ImageButton
        android:id="@+id/google_signin_ib"
        style="@style/LoginImageButtons"
        android:src="@drawable/google_signin_image"/>


    <ImageButton
        android:id="@+id/fb_signin_ib"
        style="@style/LoginImageButtons"
        android:src="@drawable/fb_image"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>