<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart.CartScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_rv"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:visibility="visible"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/recycler_line"
        style="@style/ViewLine"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_rv"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/billing_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_line">

        <TextView
            android:id="@+id/billing_header_tv"
            style="@style/CartBillHeadingTV"
            android:text="@string/price_details"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/header_line"
            style="@style/ViewLine"
            app:layout_constraintTop_toBottomOf="@+id/billing_header_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/total_product_price_tv"
            style="@style/CartBillTV"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@+id/header_line"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/total_price_tv"
            style="@style/CartBillTV"
            android:text="Rs. 900"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_product_price_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/delivery_tv"
            style="@style/CartBillTV"
            android:text="@string/delivery_fee"
            app:layout_constraintTop_toBottomOf="@+id/total_product_price_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/delivery_fee_tv"
            style="@style/CartBillTV"
            android:text="Rs.200"
            app:layout_constraintBaseline_toBaselineOf="@+id/delivery_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/delivery_line"
            style="@style/ViewLine"
            app:layout_constraintTop_toBottomOf="@+id/delivery_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/total_bill_amount_tv"
            style="@style/CartBillTV"
            android:text="@string/total_amount"
            app:layout_constraintTop_toBottomOf="@+id/delivery_line"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/total_amount_tv"
            style="@style/CartBillTV"
            android:text="Rs. 1100"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_bill_amount_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next_btn"
        style="@style/CustomButton"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>