<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.SettingScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_ib"
            style="@style/ToolBarButton"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:id="@+id/title_tv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/setting_address_ib"
        style="@style/SettingIB"
        android:src="@drawable/address_image"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/setting_address_tv"
        style="@style/SettingTV"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_address_ib"/>

    <ImageButton
        android:id="@+id/setting_profile_ib"
        style="@style/SettingIB"
        android:src="@drawable/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/setting_profile_tv"
        style="@style/SettingTV"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_profile_ib"/>

    <ImageButton
        android:id="@+id/setting_language_ib"
        style="@style/SettingIB"
        android:src="@drawable/select_language"
        app:layout_constraintTop_toBottomOf="@+id/setting_address_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/setting_language_tv"
        style="@style/SettingTV"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_language_ib"/>


    <ImageButton
        android:id="@+id/setting_signout_ib"
        style="@style/SettingIB"
        android:src="@drawable/sign_out"
        app:layout_constraintTop_toBottomOf="@+id/setting_profile_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/setting_signout_tv"
        style="@style/SettingTV"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_signout_ib"/>

</androidx.constraintlayout.widget.ConstraintLayout>